sample/src/main/kotlin/me/nibbleapp/wrench/sample/error/SendEmailErrors.kt
package me.nibbleapp.wrench.sample.error

sealed class SendEmailErrors {

    class NoNetworkError : SendEmailErrors()
    class ServerError : SendEmailErrors()
    class BadRequest : SendEmailErrors()

}